# ucu_audio_processing_course

./: .gitignore  .gitmodules  README.md  hello.py  pyproject.toml
Module_1/Lecture_1/: Intro_to_Audio_ML.ipynb
Module_1/Lecture_2/: Recurrent_models.ipynb
Module_1/Lecture_3/: Self_Supervised_Representations.ipynb  Validation.ipynb
Module_2/Lecture_1/: Intro_to_Audio_ML.ipynb
Module_2/Lecture_2/: Intro_to_Pytorch.ipynb  Validation.ipynb
Module_2/Lecture_3/: Recurrent_models.ipynb  Self_Supervised_Representations.ipynb
Module_2/Lecture_4/: Self_Supervised_Representations.ipynb
Module_3/Lecture_1/: ASR_data_preprocessing.ipynb
Module_3/Lecture_2/: ctc_advanced_practice.ipynb  ctc_architecture_advanced.ipynb
Module_4/Lecture_1/: GenAI_intro.ipynb  NeMo_TTS_Primer.ipynb  Tacotron2_Training.ipynb
Module_4/Lecture_2/: ASR-Intro.ipynb  ASR_data_preprocessing.ipynb
Module_4/Lecture_2_3/: pheme_training.ipynb
Module_4/Lecture_3/: ctc_advanced_practice.ipynb  ctc_architecture_advanced.ipynb
Module_5/Lecture_1/: seq2seq_tts.ipynb
Module_5/Lecture_1/tacotron2_common/: utils.py
Module_5/Lecture_2/: llm_tts.ipynb
kpi_2024_summer_school/: ASR_and_TTS.ipynb
ucu_2025_gen_ai_spring/: p376_001.txt
