[project]
name = "ucu-audio-processing-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.21.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers>=4.51.3",
    "tts>=0.22.0",
]
