[tool.poetry]
name = "ucu-audio-processing-course"
version = "0.1.0"
description = ""
authors = ["VSydorskyy <vladimirsydorskyy@gmail.com>", "AntonBazdyrev", "Oles Dobosevych"]
readme = "README.md"
packages = [{include = "ucu_audio_processing_course"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.11"
numpy = "^1.26.3"
torch = "^2.1.2"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
audiomentations = "^0.34.1"
torch-audiomentations = "^0.11.0"
transformers = "^4.36.2"
tensorboardx = "^2.6.2.2"
scikit-learn = "^1.4.0"
kaggle = "^1.7.4.2"
pandas = "^2.2.0"
scipy = "^1.12.0"
seaborn = "^0.13.1"
timm = "^1.0.15"
pyloudnorm = "^0.1.1"
ipywidgets = "^8.1.2"
mir-eval = "^0.7"
pyannote-audio = "^3.1.1"
nnaudio = "^0.3.2"
pyarrow = "^15.0.0"
h5py = "^3.10.0"
albumentations = "^1.4.0"
lightning = "^2.2.0.post0"
bertviz = "^1.4.0"
datasets = "^2.18.0"
jiwer = "^3.0.3"
ipdb = "^0.13.13"
accelerate = "^0.28.0"
pyctcdecode = "^0.5.0"
jsonlines = "^4.0.0"
kenlm = {git = "https://github.com/kpu/kenlm.git"}
nltk = "^3.8.1"
confidence-intervals = "^0.0.3"
graphviz = "^0.20.3"
torchviz = "^0.0.3"
torchview = "^0.2.6"
wandb = "^0.19.8"
torchmetrics = "^1.7.1"
inflect = "^7.5.0"
unidecode = "^1.4.0"
requests = "^2.32.3"



[tool.pdm.build]
includes = [
    "ucu_audio_processing_course",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "VSydorskyy", email = "vladimirsydorskyy@gmail.com"},
    {name = "AntonBazdyrev"},
    {name = "Oles Dobosevych"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "jupyterlab<5.0.0,>=4.0.11",
    "numpy<2.0.0,>=1.26.3",
    "torch<3.0.0,>=2.1.2",
    "torchvision<1.0.0,>=0.16.2",
    "torchaudio<3.0.0,>=2.1.2",
    "audiomentations<1.0.0,>=0.34.1",
    "torch-audiomentations<1.0.0,>=0.11.0",
    "transformers<5.0.0,>=4.36.2",
    "tensorboardx<3.0.0.0,>=2.6.2.2",
    "scikit-learn<2.0.0,>=1.4.0",
    "kaggle<2.0.0.0,>=1.7.4.2",
    "pandas<3.0.0,>=2.2.0",
    "scipy<2.0.0,>=1.12.0",
    "seaborn<1.0.0,>=0.13.1",
    "timm<2.0.0,>=1.0.15",
    "pyloudnorm<1.0.0,>=0.1.1",
    "ipywidgets<9.0.0,>=8.1.2",
    "mir-eval<1.0,>=0.7",
    "pyannote-audio<4.0.0,>=3.1.1",
    "nnaudio<1.0.0,>=0.3.2",
    "pyarrow<16.0.0,>=15.0.0",
    "h5py<4.0.0,>=3.10.0",
    "albumentations<2.0.0,>=1.4.0",
    "lightning<3.0.0.0,>=2.2.0.post0",
    "bertviz<2.0.0,>=1.4.0",
    "datasets<3.0.0,>=2.18.0",
    "jiwer<4.0.0,>=3.0.3",
    "ipdb<1.0.0,>=0.13.13",
    "accelerate<1.0.0,>=0.28.0",
    "pyctcdecode<1.0.0,>=0.5.0",
    "jsonlines<5.0.0,>=4.0.0",
    "kenlm @ git+https://github.com/kpu/kenlm.git",
    "nltk<4.0.0,>=3.8.1",
    "confidence-intervals<1.0.0,>=0.0.3",
    "graphviz<1.0.0,>=0.20.3",
    "torchviz<1.0.0,>=0.0.3",
    "torchview<1.0.0,>=0.2.6",
    "wandb<1.0.0,>=0.19.8",
    "torchmetrics<2.0.0,>=1.7.1",
    "inflect<8.0.0,>=7.5.0",
    "unidecode<2.0.0,>=1.4.0",
    "onnxruntime-gpu<2.0.0,>=1.21.1",
    "requests<3.0.0,>=2.32.3",
]
name = "ucu-audio-processing-course"
version = "0.1.0"
description = ""
readme = "README.md"
