[tool.poetry]
name = "ucu-audio-processing-course"
version = "0.1.0"
description = ""
authors = ["VSydorskyy <vladimirsydorskyy@gmail.com>", "AntonBazdyrev", "Oles Dobosevych"]
readme = "README.md"
packages = [{include = "ucu_audio_processing_course"}]

[tool.poetry.dependencies]
# In order to be conistent with TTS package (https://pypi.org/project/TTS/)
python = ">=3.10,<3.12"
jupyterlab = "^4.0.11"
numpy = "^1.26.3"
torch = "^2.9.1"
torchvision = "^0.24.1"
torchaudio = "^2.9.1"
audiomentations = "^0.34.1"
torch-audiomentations = "^0.11.0"
transformers = "^4.36.2"
tensorboardx = "^2.6.2.2"
scikit-learn = "^1.4.0"
kaggle = "^1.7.4.2"
pandas = "^2.2.0"
scipy = "^1.12.0"
seaborn = "^0.13.1"
timm = "^1.0.15"
pyloudnorm = "^0.1.1"
ipywidgets = "^8.1.2"
mir-eval = "^0.7"
pyannote-audio = "^3.1.1"
nnaudio = "^0.3.2"
pyarrow = "^15.0.0"
h5py = "^3.10.0"
albumentations = "^1.4.0"
lightning = "^2.2.0.post0"
bertviz = "^1.4.0"
datasets = "^2.18.0"
jiwer = "^3.0.3"
ipdb = "^0.13.13"
accelerate = "^0.28.0"
pyctcdecode = "^0.5.0"
jsonlines = "^4.0.0"
nltk = "^3.8.1"
confidence-intervals = "^0.0.3"
graphviz = "^0.21"
torchviz = "^0.0.3"
torchview = "^0.2.6"
wandb = "^0.19.8"
torchmetrics = "^1.7.1"
inflect = "^7.5.0"
unidecode = "^1.4.0"
onnxruntime-gpu = "^1.21.1"
requests = "^2.32.3"
pydot = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
